# Easy_Tensor_Compiler

./: CMakeLists.txt  README.md  conanfile.txt  requirements.txt
benchmark/: CMakeLists.txt  matmul.cpp  run_benchmark.sh
benchmark/data/: data1.in  data2.in  data3.in
includes/: detail.hpp  matmul.hpp  matrix.hpp  network.hpp  operations.hpp  tensor.hpp
src/: 1.cpp  etc.cpp  main.cpp
tests/unit_test/: CMakeLists.txt  matrix.cpp  network.cpp  tensor.cpp
